# analysts-alpha-ml-signals

./: .gitignore  README.md  main.py  pyproject.toml  temp.csv
configs/: ml_config.json  run_config.json
outputs/: backtest_RANDOM_FOREST_2019-01_2024-12_2026-01-03.xlsx
scripts/: example_create_features.py  get_ml_results.py  perf.py  s3_example.py
src/alpha_in_analysts/: backtester.py  book_engine.py  features_engine.py  meta_backtest.py  meta_portfolio.py  orchestrator.py
src/alpha_in_analysts/backtester/: backtest_polars.py  portfolio.py
src/alpha_in_analysts/utils/: config.py  helpers.py  mapping.py
src/analysts_ml_signals/: __init__.py  book_engine.py  features_engine.py  meta_portfolio.py  utils.py
