[project]
name = "analysts-ml-signals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thibault Charbonnier", email = "thibault.charbonnier@edu.devinci.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
